Modified .gitignore and finished GAN

--- a/batch-norm/Batch_Normalization_Exercises.ipynb
+++ b/batch-norm/Batch_Normalization_Exercises.ipynb
@@ -38,11 +38,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-1-868c89712c65>:3: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -69,10 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -104,10 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -141,11 +164,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch:  0: Validation loss: 0.69119, Validation accuracy: 0.11000\n",
+      "Batch: 25: Training loss: 0.33959, Training accuracy: 0.14062\n",
+      "Batch: 50: Training loss: 0.32760, Training accuracy: 0.10938\n",
+      "Batch: 75: Training loss: 0.32758, Training accuracy: 0.01562\n",
+      "Batch: 100: Validation loss: 0.32580, Validation accuracy: 0.11000\n",
+      "Batch: 125: Training loss: 0.32547, Training accuracy: 0.12500\n",
+      "Batch: 150: Training loss: 0.32501, Training accuracy: 0.07812\n",
+      "Batch: 175: Training loss: 0.32560, Training accuracy: 0.09375\n",
+      "Batch: 200: Validation loss: 0.32596, Validation accuracy: 0.09900\n",
+      "Batch: 225: Training loss: 0.32672, Training accuracy: 0.07812\n",
+      "Batch: 250: Training loss: 0.32320, Training accuracy: 0.12500\n",
+      "Batch: 275: Training loss: 0.32216, Training accuracy: 0.17188\n",
+      "Batch: 300: Validation loss: 0.32532, Validation accuracy: 0.11260\n",
+      "Batch: 325: Training loss: 0.32589, Training accuracy: 0.07812\n",
+      "Batch: 350: Training loss: 0.32458, Training accuracy: 0.12500\n",
+      "Batch: 375: Training loss: 0.32436, Training accuracy: 0.12500\n",
+      "Batch: 400: Validation loss: 0.32534, Validation accuracy: 0.11000\n",
+      "Batch: 425: Training loss: 0.32561, Training accuracy: 0.07812\n",
+      "Batch: 450: Training loss: 0.32418, Training accuracy: 0.12500\n",
+      "Batch: 475: Training loss: 0.32318, Training accuracy: 0.12500\n",
+      "Batch: 500: Validation loss: 0.32514, Validation accuracy: 0.11260\n",
+      "Batch: 525: Training loss: 0.32569, Training accuracy: 0.10938\n",
+      "Batch: 550: Training loss: 0.32539, Training accuracy: 0.15625\n",
+      "Batch: 575: Training loss: 0.32379, Training accuracy: 0.10938\n",
+      "Batch: 600: Validation loss: 0.32626, Validation accuracy: 0.09900\n",
+      "Batch: 625: Training loss: 0.32390, Training accuracy: 0.14062\n",
+      "Batch: 650: Training loss: 0.32498, Training accuracy: 0.07812\n",
+      "Batch: 675: Training loss: 0.32495, Training accuracy: 0.09375\n",
+      "Batch: 700: Validation loss: 0.32511, Validation accuracy: 0.11260\n",
+      "Batch: 725: Training loss: 0.32505, Training accuracy: 0.17188\n",
+      "Batch: 750: Training loss: 0.32490, Training accuracy: 0.10938\n",
+      "Batch: 775: Training loss: 0.32602, Training accuracy: 0.04688\n",
+      "Final validation accuracy: 0.11260\n",
+      "Final test accuracy: 0.11350\n",
+      "Accuracy on 100 samples: 0.14\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DO NOT MODIFY THIS CELL\n",
@@ -247,10 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fully_connected(prev_layer, num_units):\n",
@@ -277,10 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def conv_layer(prev_layer, layer_depth):\n",
@@ -309,11 +368,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch:  0: Validation loss: 0.69080, Validation accuracy: 0.11000\n",
+      "Batch: 25: Training loss: 0.36129, Training accuracy: 0.17188\n",
+      "Batch: 50: Training loss: 0.32806, Training accuracy: 0.07812\n",
+      "Batch: 75: Training loss: 0.32640, Training accuracy: 0.10938\n",
+      "Batch: 100: Validation loss: 0.32615, Validation accuracy: 0.09900\n",
+      "Batch: 125: Training loss: 0.32268, Training accuracy: 0.15625\n",
+      "Batch: 150: Training loss: 0.32657, Training accuracy: 0.10938\n",
+      "Batch: 175: Training loss: 0.32694, Training accuracy: 0.06250\n",
+      "Batch: 200: Validation loss: 0.32563, Validation accuracy: 0.09860\n",
+      "Batch: 225: Training loss: 0.32541, Training accuracy: 0.10938\n",
+      "Batch: 250: Training loss: 0.32545, Training accuracy: 0.10938\n",
+      "Batch: 275: Training loss: 0.32313, Training accuracy: 0.17188\n",
+      "Batch: 300: Validation loss: 0.32513, Validation accuracy: 0.11000\n",
+      "Batch: 325: Training loss: 0.32312, Training accuracy: 0.14062\n",
+      "Batch: 350: Training loss: 0.32438, Training accuracy: 0.10938\n",
+      "Batch: 375: Training loss: 0.32486, Training accuracy: 0.14062\n",
+      "Batch: 400: Validation loss: 0.32595, Validation accuracy: 0.11260\n",
+      "Batch: 425: Training loss: 0.32639, Training accuracy: 0.09375\n",
+      "Batch: 450: Training loss: 0.32547, Training accuracy: 0.09375\n",
+      "Batch: 475: Training loss: 0.32588, Training accuracy: 0.09375\n",
+      "Batch: 500: Validation loss: 0.32542, Validation accuracy: 0.11260\n",
+      "Batch: 525: Training loss: 0.32436, Training accuracy: 0.15625\n",
+      "Batch: 550: Training loss: 0.32561, Training accuracy: 0.06250\n",
+      "Batch: 575: Training loss: 0.32713, Training accuracy: 0.04688\n",
+      "Batch: 600: Validation loss: 0.32519, Validation accuracy: 0.11260\n",
+      "Batch: 625: Training loss: 0.32373, Training accuracy: 0.10938\n",
+      "Batch: 650: Training loss: 0.32166, Training accuracy: 0.20312\n",
+      "Batch: 675: Training loss: 0.32525, Training accuracy: 0.12500\n",
+      "Batch: 700: Validation loss: 0.32563, Validation accuracy: 0.11000\n",
+      "Batch: 725: Training loss: 0.32550, Training accuracy: 0.14062\n",
+      "Batch: 750: Training loss: 0.32706, Training accuracy: 0.12500\n",
+      "Batch: 775: Training loss: 0.32586, Training accuracy: 0.09375\n",
+      "Final validation accuracy: 0.11260\n",
+      "Final test accuracy: 0.11350\n",
+      "Accuracy on 100 samples: 0.14\n"
+     ]
+    }
+   ],
    "source": [
     "def train(num_batches, batch_size, learning_rate):\n",
     "    # Build placeholders for the input samples and labels \n",
@@ -587,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
