--- a/batch-norm/Batch_Normalization_Exercises.ipynb
+++ b/batch-norm/Batch_Normalization_Exercises.ipynb
@@ -171,38 +171,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch:  0: Validation loss: 0.69119, Validation accuracy: 0.11000\n",
-      "Batch: 25: Training loss: 0.33959, Training accuracy: 0.14062\n",
-      "Batch: 50: Training loss: 0.32760, Training accuracy: 0.10938\n",
-      "Batch: 75: Training loss: 0.32758, Training accuracy: 0.01562\n",
-      "Batch: 100: Validation loss: 0.32580, Validation accuracy: 0.11000\n",
-      "Batch: 125: Training loss: 0.32547, Training accuracy: 0.12500\n",
-      "Batch: 150: Training loss: 0.32501, Training accuracy: 0.07812\n",
-      "Batch: 175: Training loss: 0.32560, Training accuracy: 0.09375\n",
-      "Batch: 200: Validation loss: 0.32596, Validation accuracy: 0.09900\n",
-      "Batch: 225: Training loss: 0.32672, Training accuracy: 0.07812\n",
-      "Batch: 250: Training loss: 0.32320, Training accuracy: 0.12500\n",
-      "Batch: 275: Training loss: 0.32216, Training accuracy: 0.17188\n",
-      "Batch: 300: Validation loss: 0.32532, Validation accuracy: 0.11260\n",
-      "Batch: 325: Training loss: 0.32589, Training accuracy: 0.07812\n",
-      "Batch: 350: Training loss: 0.32458, Training accuracy: 0.12500\n",
-      "Batch: 375: Training loss: 0.32436, Training accuracy: 0.12500\n",
-      "Batch: 400: Validation loss: 0.32534, Validation accuracy: 0.11000\n",
-      "Batch: 425: Training loss: 0.32561, Training accuracy: 0.07812\n",
-      "Batch: 450: Training loss: 0.32418, Training accuracy: 0.12500\n",
-      "Batch: 475: Training loss: 0.32318, Training accuracy: 0.12500\n",
-      "Batch: 500: Validation loss: 0.32514, Validation accuracy: 0.11260\n",
-      "Batch: 525: Training loss: 0.32569, Training accuracy: 0.10938\n",
-      "Batch: 550: Training loss: 0.32539, Training accuracy: 0.15625\n",
-      "Batch: 575: Training loss: 0.32379, Training accuracy: 0.10938\n",
-      "Batch: 600: Validation loss: 0.32626, Validation accuracy: 0.09900\n",
-      "Batch: 625: Training loss: 0.32390, Training accuracy: 0.14062\n",
-      "Batch: 650: Training loss: 0.32498, Training accuracy: 0.07812\n",
-      "Batch: 675: Training loss: 0.32495, Training accuracy: 0.09375\n",
-      "Batch: 700: Validation loss: 0.32511, Validation accuracy: 0.11260\n",
-      "Batch: 725: Training loss: 0.32505, Training accuracy: 0.17188\n",
-      "Batch: 750: Training loss: 0.32490, Training accuracy: 0.10938\n",
-      "Batch: 775: Training loss: 0.32602, Training accuracy: 0.04688\n",
+      "Batch:  0: Validation loss: 0.69118, Validation accuracy: 0.11260\n",
+      "Batch: 25: Training loss: 0.44063, Training accuracy: 0.09375\n",
+      "Batch: 50: Training loss: 0.33192, Training accuracy: 0.10938\n",
+      "Batch: 75: Training loss: 0.32589, Training accuracy: 0.09375\n",
+      "Batch: 100: Validation loss: 0.32557, Validation accuracy: 0.09860\n",
+      "Batch: 125: Training loss: 0.32489, Training accuracy: 0.09375\n",
+      "Batch: 150: Training loss: 0.32682, Training accuracy: 0.10938\n",
+      "Batch: 175: Training loss: 0.32406, Training accuracy: 0.12500\n",
+      "Batch: 200: Validation loss: 0.32541, Validation accuracy: 0.11000\n",
+      "Batch: 225: Training loss: 0.32762, Training accuracy: 0.07812\n",
+      "Batch: 250: Training loss: 0.32559, Training accuracy: 0.09375\n",
+      "Batch: 275: Training loss: 0.32835, Training accuracy: 0.06250\n",
+      "Batch: 300: Validation loss: 0.32591, Validation accuracy: 0.10020\n",
+      "Batch: 325: Training loss: 0.32577, Training accuracy: 0.15625\n",
+      "Batch: 350: Training loss: 0.32335, Training accuracy: 0.15625\n",
+      "Batch: 375: Training loss: 0.32496, Training accuracy: 0.14062\n",
+      "Batch: 400: Validation loss: 0.32520, Validation accuracy: 0.11260\n",
+      "Batch: 425: Training loss: 0.32428, Training accuracy: 0.17188\n",
+      "Batch: 450: Training loss: 0.32744, Training accuracy: 0.07812\n",
+      "Batch: 475: Training loss: 0.32581, Training accuracy: 0.10938\n",
+      "Batch: 500: Validation loss: 0.32511, Validation accuracy: 0.11000\n",
+      "Batch: 525: Training loss: 0.32404, Training accuracy: 0.06250\n",
+      "Batch: 550: Training loss: 0.32836, Training accuracy: 0.06250\n",
+      "Batch: 575: Training loss: 0.32726, Training accuracy: 0.10938\n",
+      "Batch: 600: Validation loss: 0.32543, Validation accuracy: 0.11260\n",
+      "Batch: 625: Training loss: 0.32277, Training accuracy: 0.07812\n",
+      "Batch: 650: Training loss: 0.32534, Training accuracy: 0.07812\n",
+      "Batch: 675: Training loss: 0.32416, Training accuracy: 0.15625\n",
+      "Batch: 700: Validation loss: 0.32532, Validation accuracy: 0.11260\n",
+      "Batch: 725: Training loss: 0.32422, Training accuracy: 0.09375\n",
+      "Batch: 750: Training loss: 0.32543, Training accuracy: 0.06250\n",
+      "Batch: 775: Training loss: 0.32368, Training accuracy: 0.14062\n",
       "Final validation accuracy: 0.11260\n",
       "Final test accuracy: 0.11350\n",
       "Accuracy on 100 samples: 0.14\n"
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fully_connected(prev_layer, num_units):\n",
+    "def fully_connected(prev_layer, num_units, is_training):\n",
     "    \"\"\"\n",
     "    Create a fully connectd layer with the given layer as input and the given number of neurons.\n",
     "    \n",
@@ -325,7 +325,10 @@
     "    :returns Tensor\n",
     "        A new fully connected layer\n",
     "    \"\"\"\n",
-    "    layer = tf.layers.dense(prev_layer, num_units, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.dense(prev_layer, num_units, use_bias=False, activation=None)\n",
+    "    layer = tf.layers.batch_normalization(layer, training=is_training)\n",
+    "    layer = tf.nn.relu(layer)\n",
+    "    \n",
     "    return layer"
    ]
   },
@@ -342,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conv_layer(prev_layer, layer_depth):\n",
+    "def conv_layer(prev_layer, layer_depth, is_training):\n",
     "    \"\"\"\n",
     "    Create a convolutional layer with the given layer as input.\n",
     "    \n",
@@ -355,7 +358,11 @@
     "        A new convolutional layer\n",
     "    \"\"\"\n",
     "    strides = 2 if layer_depth % 3 == 0 else 1\n",
-    "    conv_layer = tf.layers.conv2d(prev_layer, layer_depth*4, 3, strides, 'same', activation=tf.nn.relu)\n",
+    "    \n",
+    "    conv_layer = tf.layers.conv2d(prev_layer, layer_depth*4, 3, strides, 'same', use_bias=False, activation=None)\n",
+    "    conv_layer = tf.layers.batch_normalization(conv_layer, training=is_training)\n",
+    "    conv_layer = tf.nn.relu(conv_layer)\n",
+    "    \n",
     "    return conv_layer"
    ]
   },
@@ -368,48 +375,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch:  0: Validation loss: 0.69080, Validation accuracy: 0.11000\n",
-      "Batch: 25: Training loss: 0.36129, Training accuracy: 0.17188\n",
-      "Batch: 50: Training loss: 0.32806, Training accuracy: 0.07812\n",
-      "Batch: 75: Training loss: 0.32640, Training accuracy: 0.10938\n",
-      "Batch: 100: Validation loss: 0.32615, Validation accuracy: 0.09900\n",
-      "Batch: 125: Training loss: 0.32268, Training accuracy: 0.15625\n",
-      "Batch: 150: Training loss: 0.32657, Training accuracy: 0.10938\n",
-      "Batch: 175: Training loss: 0.32694, Training accuracy: 0.06250\n",
-      "Batch: 200: Validation loss: 0.32563, Validation accuracy: 0.09860\n",
-      "Batch: 225: Training loss: 0.32541, Training accuracy: 0.10938\n",
-      "Batch: 250: Training loss: 0.32545, Training accuracy: 0.10938\n",
-      "Batch: 275: Training loss: 0.32313, Training accuracy: 0.17188\n",
-      "Batch: 300: Validation loss: 0.32513, Validation accuracy: 0.11000\n",
-      "Batch: 325: Training loss: 0.32312, Training accuracy: 0.14062\n",
-      "Batch: 350: Training loss: 0.32438, Training accuracy: 0.10938\n",
-      "Batch: 375: Training loss: 0.32486, Training accuracy: 0.14062\n",
-      "Batch: 400: Validation loss: 0.32595, Validation accuracy: 0.11260\n",
-      "Batch: 425: Training loss: 0.32639, Training accuracy: 0.09375\n",
-      "Batch: 450: Training loss: 0.32547, Training accuracy: 0.09375\n",
-      "Batch: 475: Training loss: 0.32588, Training accuracy: 0.09375\n",
-      "Batch: 500: Validation loss: 0.32542, Validation accuracy: 0.11260\n",
-      "Batch: 525: Training loss: 0.32436, Training accuracy: 0.15625\n",
-      "Batch: 550: Training loss: 0.32561, Training accuracy: 0.06250\n",
-      "Batch: 575: Training loss: 0.32713, Training accuracy: 0.04688\n",
-      "Batch: 600: Validation loss: 0.32519, Validation accuracy: 0.11260\n",
-      "Batch: 625: Training loss: 0.32373, Training accuracy: 0.10938\n",
-      "Batch: 650: Training loss: 0.32166, Training accuracy: 0.20312\n",
-      "Batch: 675: Training loss: 0.32525, Training accuracy: 0.12500\n",
-      "Batch: 700: Validation loss: 0.32563, Validation accuracy: 0.11000\n",
-      "Batch: 725: Training loss: 0.32550, Training accuracy: 0.14062\n",
-      "Batch: 750: Training loss: 0.32706, Training accuracy: 0.12500\n",
-      "Batch: 775: Training loss: 0.32586, Training accuracy: 0.09375\n",
-      "Final validation accuracy: 0.11260\n",
-      "Final test accuracy: 0.11350\n",
-      "Accuracy on 100 samples: 0.14\n"
+      "Batch:  0: Validation loss: 0.69144, Validation accuracy: 0.10020\n",
+      "Batch: 25: Training loss: 0.59772, Training accuracy: 0.06250\n",
+      "Batch: 50: Training loss: 0.48963, Training accuracy: 0.12500\n",
+      "Batch: 75: Training loss: 0.41434, Training accuracy: 0.06250\n",
+      "Batch: 100: Validation loss: 0.36816, Validation accuracy: 0.08680\n",
+      "Batch: 125: Training loss: 0.33763, Training accuracy: 0.18750\n",
+      "Batch: 150: Training loss: 0.33788, Training accuracy: 0.06250\n",
+      "Batch: 175: Training loss: 0.33819, Training accuracy: 0.10938\n",
+      "Batch: 200: Validation loss: 0.33298, Validation accuracy: 0.21720\n",
+      "Batch: 225: Training loss: 0.30299, Training accuracy: 0.25000\n",
+      "Batch: 250: Training loss: 0.42979, Training accuracy: 0.21875\n",
+      "Batch: 275: Training loss: 0.28743, Training accuracy: 0.48438\n",
+      "Batch: 300: Validation loss: 0.33256, Validation accuracy: 0.46000\n",
+      "Batch: 325: Training loss: 0.23774, Training accuracy: 0.64062\n",
+      "Batch: 350: Training loss: 0.12041, Training accuracy: 0.84375\n",
+      "Batch: 375: Training loss: 0.10030, Training accuracy: 0.82812\n",
+      "Batch: 400: Validation loss: 0.04514, Validation accuracy: 0.92720\n",
+      "Batch: 425: Training loss: 0.01228, Training accuracy: 0.98438\n",
+      "Batch: 450: Training loss: 0.05538, Training accuracy: 0.85938\n",
+      "Batch: 475: Training loss: 0.03615, Training accuracy: 0.93750\n",
+      "Batch: 500: Validation loss: 0.03559, Validation accuracy: 0.94580\n",
+      "Batch: 525: Training loss: 0.06434, Training accuracy: 0.89062\n",
+      "Batch: 550: Training loss: 0.12873, Training accuracy: 0.84375\n",
+      "Batch: 575: Training loss: 0.01096, Training accuracy: 0.98438\n",
+      "Batch: 600: Validation loss: 0.05764, Validation accuracy: 0.92440\n",
+      "Batch: 625: Training loss: 0.19532, Training accuracy: 0.78125\n",
+      "Batch: 650: Training loss: 0.02088, Training accuracy: 0.96875\n",
+      "Batch: 675: Training loss: 0.02935, Training accuracy: 0.96875\n",
+      "Batch: 700: Validation loss: 0.08112, Validation accuracy: 0.88840\n",
+      "Batch: 725: Training loss: 0.06087, Training accuracy: 0.92188\n",
+      "Batch: 750: Training loss: 0.00214, Training accuracy: 1.00000\n",
+      "Batch: 775: Training loss: 0.04763, Training accuracy: 0.93750\n",
+      "Final validation accuracy: 0.96760\n",
+      "Final test accuracy: 0.96650\n",
+      "Accuracy on 100 samples: 0.98\n"
      ]
     }
    ],
@@ -419,28 +426,34 @@
     "    inputs = tf.placeholder(tf.float32, [None, 28, 28, 1])\n",
     "    labels = tf.placeholder(tf.float32, [None, 10])\n",
     "    \n",
+    "    # Traininig bool value\n",
+    "    is_training = tf.placeholder(tf.bool)\n",
+    "    \n",
     "    # Feed the inputs into a series of 20 convolutional layers \n",
     "    layer = inputs\n",
     "    for layer_i in range(1, 20):\n",
-    "        layer = conv_layer(layer, layer_i)\n",
+    "        layer = conv_layer(layer, layer_i, is_training)\n",
     "\n",
     "    # Flatten the output from the convolutional layers \n",
     "    orig_shape = layer.get_shape().as_list()\n",
     "    layer = tf.reshape(layer, shape=[-1, orig_shape[1] * orig_shape[2] * orig_shape[3]])\n",
     "\n",
     "    # Add one fully connected layer\n",
-    "    layer = fully_connected(layer, 100)\n",
-    "\n",
+    "    layer = fully_connected(layer, 100, is_training)\n",
+    "    \n",
     "    # Create the output layer with 1 node for each \n",
     "    logits = tf.layers.dense(layer, 10)\n",
     "    \n",
     "    # Define loss and training operations\n",
     "    model_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=logits, labels=labels))\n",
-    "    train_opt = tf.train.AdamOptimizer(learning_rate).minimize(model_loss)\n",
     "    \n",
+    "    with tf.control_dependencies(tf.get_collection(tf.GraphKeys.UPDATE_OPS)):\n",
+    "        train_opt = tf.train.AdamOptimizer(learning_rate).minimize(model_loss)\n",
+    "        \n",
     "    # Create operations to test accuracy\n",
     "    correct_prediction = tf.equal(tf.argmax(logits,1), tf.argmax(labels,1))\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "    \n",
     "    \n",
     "    # Train and test the network\n",
     "    with tf.Session() as sess:\n",
@@ -449,30 +462,34 @@
     "            batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
     "\n",
     "            # train this batch\n",
-    "            sess.run(train_opt, {inputs: batch_xs, labels: batch_ys})\n",
+    "            sess.run(train_opt, {inputs: batch_xs, labels: batch_ys, is_training:True})\n",
     "            \n",
     "            # Periodically check the validation or training loss and accuracy\n",
     "            if batch_i % 100 == 0:\n",
     "                loss, acc = sess.run([model_loss, accuracy], {inputs: mnist.validation.images,\n",
-    "                                                              labels: mnist.validation.labels})\n",
+    "                                                              labels: mnist.validation.labels,\n",
+    "                                                             is_training:False})\n",
     "                print('Batch: {:>2}: Validation loss: {:>3.5f}, Validation accuracy: {:>3.5f}'.format(batch_i, loss, acc))\n",
     "            elif batch_i % 25 == 0:\n",
-    "                loss, acc = sess.run([model_loss, accuracy], {inputs: batch_xs, labels: batch_ys})\n",
+    "                loss, acc = sess.run([model_loss, accuracy], {inputs: batch_xs, labels: batch_ys, is_training:False})\n",
     "                print('Batch: {:>2}: Training loss: {:>3.5f}, Training accuracy: {:>3.5f}'.format(batch_i, loss, acc))\n",
     "\n",
     "        # At the end, score the final accuracy for both the validation and test sets\n",
     "        acc = sess.run(accuracy, {inputs: mnist.validation.images,\n",
-    "                                  labels: mnist.validation.labels})\n",
+    "                                  labels: mnist.validation.labels,\n",
+    "                                  is_training:False})\n",
     "        print('Final validation accuracy: {:>3.5f}'.format(acc))\n",
     "        acc = sess.run(accuracy, {inputs: mnist.test.images,\n",
-    "                                  labels: mnist.test.labels})\n",
+    "                                  labels: mnist.test.labels,\n",
+    "                                  is_training:False})\n",
     "        print('Final test accuracy: {:>3.5f}'.format(acc))\n",
     "        \n",
     "        # Score the first 100 test images individually. This won't work if batch normalization isn't implemented correctly.\n",
     "        correct = 0\n",
     "        for i in range(100):\n",
     "            correct += sess.run(accuracy,feed_dict={inputs: [mnist.test.images[i]],\n",
-    "                                                    labels: [mnist.test.labels[i]]})\n",
+    "                                                    labels: [mnist.test.labels[i]],\n",
+    "                                                    is_training:False})\n",
     "\n",
     "        print(\"Accuracy on 100 samples:\", correct/100)\n",
     "\n",
