--- a/batch-norm/Batch_Normalization_Solutions.ipynb
+++ b/batch-norm/Batch_Normalization_Solutions.ipynb
@@ -45,10 +45,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From <ipython-input-1-868c89712c65>:3: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
       "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
      ]
     }
    ],
@@ -79,9 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -114,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -157,41 +171,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch:  0: Validation loss: 0.69066, Validation accuracy: 0.09580\n",
-      "Batch: 25: Training loss: 0.33632, Training accuracy: 0.07812\n",
-      "Batch: 50: Training loss: 0.32540, Training accuracy: 0.10938\n",
-      "Batch: 75: Training loss: 0.32689, Training accuracy: 0.09375\n",
-      "Batch: 100: Validation loss: 0.32562, Validation accuracy: 0.10700\n",
-      "Batch: 125: Training loss: 0.32580, Training accuracy: 0.03125\n",
-      "Batch: 150: Training loss: 0.32605, Training accuracy: 0.10938\n",
-      "Batch: 175: Training loss: 0.32327, Training accuracy: 0.09375\n",
-      "Batch: 200: Validation loss: 0.32601, Validation accuracy: 0.09860\n",
-      "Batch: 225: Training loss: 0.32541, Training accuracy: 0.07812\n",
-      "Batch: 250: Training loss: 0.32626, Training accuracy: 0.07812\n",
-      "Batch: 275: Training loss: 0.32360, Training accuracy: 0.12500\n",
-      "Batch: 300: Validation loss: 0.32589, Validation accuracy: 0.09240\n",
-      "Batch: 325: Training loss: 0.32271, Training accuracy: 0.15625\n",
-      "Batch: 350: Training loss: 0.32303, Training accuracy: 0.12500\n",
-      "Batch: 375: Training loss: 0.32643, Training accuracy: 0.10938\n",
-      "Batch: 400: Validation loss: 0.32498, Validation accuracy: 0.11260\n",
-      "Batch: 425: Training loss: 0.32552, Training accuracy: 0.09375\n",
-      "Batch: 450: Training loss: 0.32669, Training accuracy: 0.10938\n",
-      "Batch: 475: Training loss: 0.32649, Training accuracy: 0.04688\n",
-      "Batch: 500: Validation loss: 0.32516, Validation accuracy: 0.11000\n",
-      "Batch: 525: Training loss: 0.32924, Training accuracy: 0.01562\n",
-      "Batch: 550: Training loss: 0.32491, Training accuracy: 0.20312\n",
-      "Batch: 575: Training loss: 0.32237, Training accuracy: 0.28125\n",
-      "Batch: 600: Validation loss: 0.32532, Validation accuracy: 0.09240\n",
-      "Batch: 625: Training loss: 0.32465, Training accuracy: 0.14062\n",
-      "Batch: 650: Training loss: 0.32736, Training accuracy: 0.07812\n",
-      "Batch: 675: Training loss: 0.32522, Training accuracy: 0.12500\n",
-      "Batch: 700: Validation loss: 0.32503, Validation accuracy: 0.09860\n",
-      "Batch: 725: Training loss: 0.32523, Training accuracy: 0.09375\n",
-      "Batch: 750: Training loss: 0.32533, Training accuracy: 0.14062\n",
-      "Batch: 775: Training loss: 0.32533, Training accuracy: 0.12500\n",
-      "Final validation accuracy: 0.11420\n",
-      "Final test accuracy: 0.12190\n",
-      "Accuracy on 100 samples: 0.13\n"
+      "Batch:  0: Validation loss: 0.69090, Validation accuracy: 0.09580\n",
+      "Batch: 25: Training loss: 0.53470, Training accuracy: 0.12500\n",
+      "Batch: 50: Training loss: 0.33653, Training accuracy: 0.06250\n",
+      "Batch: 75: Training loss: 0.32754, Training accuracy: 0.07812\n",
+      "Batch: 100: Validation loss: 0.32530, Validation accuracy: 0.11260\n",
+      "Batch: 125: Training loss: 0.32670, Training accuracy: 0.10938\n",
+      "Batch: 150: Training loss: 0.32252, Training accuracy: 0.18750\n",
+      "Batch: 175: Training loss: 0.32428, Training accuracy: 0.06250\n",
+      "Batch: 200: Validation loss: 0.32718, Validation accuracy: 0.09760\n",
+      "Batch: 225: Training loss: 0.32564, Training accuracy: 0.07812\n",
+      "Batch: 250: Training loss: 0.32288, Training accuracy: 0.20312\n",
+      "Batch: 275: Training loss: 0.32574, Training accuracy: 0.09375\n",
+      "Batch: 300: Validation loss: 0.32538, Validation accuracy: 0.11000\n",
+      "Batch: 325: Training loss: 0.32574, Training accuracy: 0.12500\n",
+      "Batch: 350: Training loss: 0.32086, Training accuracy: 0.26562\n",
+      "Batch: 375: Training loss: 0.32562, Training accuracy: 0.07812\n",
+      "Batch: 400: Validation loss: 0.32646, Validation accuracy: 0.11260\n",
+      "Batch: 425: Training loss: 0.32543, Training accuracy: 0.07812\n",
+      "Batch: 450: Training loss: 0.32460, Training accuracy: 0.14062\n",
+      "Batch: 475: Training loss: 0.32384, Training accuracy: 0.10938\n",
+      "Batch: 500: Validation loss: 0.32501, Validation accuracy: 0.11260\n",
+      "Batch: 525: Training loss: 0.32884, Training accuracy: 0.06250\n",
+      "Batch: 550: Training loss: 0.32498, Training accuracy: 0.09375\n",
+      "Batch: 575: Training loss: 0.32769, Training accuracy: 0.07812\n",
+      "Batch: 600: Validation loss: 0.32534, Validation accuracy: 0.11260\n",
+      "Batch: 625: Training loss: 0.32799, Training accuracy: 0.10938\n",
+      "Batch: 650: Training loss: 0.32645, Training accuracy: 0.10938\n",
+      "Batch: 675: Training loss: 0.32828, Training accuracy: 0.06250\n",
+      "Batch: 700: Validation loss: 0.32608, Validation accuracy: 0.11260\n",
+      "Batch: 725: Training loss: 0.32372, Training accuracy: 0.15625\n",
+      "Batch: 750: Training loss: 0.32539, Training accuracy: 0.04688\n",
+      "Batch: 775: Training loss: 0.32484, Training accuracy: 0.15625\n",
+      "Final validation accuracy: 0.09860\n",
+      "Final test accuracy: 0.10100\n",
+      "Accuracy on 100 samples: 0.11\n"
      ]
     }
    ],
@@ -292,9 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fully_connected(prev_layer, num_units, is_training):\n",
@@ -333,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def conv_layer(prev_layer, layer_depth, is_training):\n",
@@ -374,10 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def conv_layer(prev_layer, layer_num, is_training):\n",
@@ -397,10 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def conv_layer(prev_layer, layer_num, is_training):\n",
@@ -419,10 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def conv_layer(prev_layer, layer_num, is_training):\n",
@@ -445,48 +449,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch:  0: Validation loss: 0.69135, Validation accuracy: 0.09860\n",
-      "Batch: 25: Training loss: 0.58727, Training accuracy: 0.10938\n",
-      "Batch: 50: Training loss: 0.47633, Training accuracy: 0.09375\n",
-      "Batch: 75: Training loss: 0.40283, Training accuracy: 0.17188\n",
-      "Batch: 100: Validation loss: 0.36413, Validation accuracy: 0.11260\n",
-      "Batch: 125: Training loss: 0.34614, Training accuracy: 0.09375\n",
-      "Batch: 150: Training loss: 0.34372, Training accuracy: 0.04688\n",
-      "Batch: 175: Training loss: 0.31415, Training accuracy: 0.25000\n",
-      "Batch: 200: Validation loss: 0.33029, Validation accuracy: 0.20880\n",
-      "Batch: 225: Training loss: 0.37454, Training accuracy: 0.20312\n",
-      "Batch: 250: Training loss: 0.35721, Training accuracy: 0.42188\n",
-      "Batch: 275: Training loss: 0.30789, Training accuracy: 0.46875\n",
-      "Batch: 300: Validation loss: 0.18574, Validation accuracy: 0.71100\n",
-      "Batch: 325: Training loss: 0.22868, Training accuracy: 0.64062\n",
-      "Batch: 350: Training loss: 0.27518, Training accuracy: 0.65625\n",
-      "Batch: 375: Training loss: 0.05569, Training accuracy: 0.90625\n",
-      "Batch: 400: Validation loss: 0.09854, Validation accuracy: 0.85200\n",
-      "Batch: 425: Training loss: 0.04723, Training accuracy: 0.90625\n",
-      "Batch: 450: Training loss: 0.02127, Training accuracy: 0.98438\n",
-      "Batch: 475: Training loss: 0.00786, Training accuracy: 0.98438\n",
-      "Batch: 500: Validation loss: 0.04686, Validation accuracy: 0.93780\n",
-      "Batch: 525: Training loss: 0.02769, Training accuracy: 0.95312\n",
-      "Batch: 550: Training loss: 0.00446, Training accuracy: 1.00000\n",
-      "Batch: 575: Training loss: 0.05585, Training accuracy: 0.92188\n",
-      "Batch: 600: Validation loss: 0.03143, Validation accuracy: 0.95780\n",
-      "Batch: 625: Training loss: 0.00918, Training accuracy: 0.98438\n",
-      "Batch: 650: Training loss: 0.03437, Training accuracy: 0.95312\n",
-      "Batch: 675: Training loss: 0.03991, Training accuracy: 0.96875\n",
-      "Batch: 700: Validation loss: 0.03455, Validation accuracy: 0.95300\n",
-      "Batch: 725: Training loss: 0.03672, Training accuracy: 0.93750\n",
-      "Batch: 750: Training loss: 0.03293, Training accuracy: 0.95312\n",
-      "Batch: 775: Training loss: 0.02039, Training accuracy: 0.96875\n",
-      "Final validation accuracy: 0.97460\n",
-      "Final test accuracy: 0.97450\n",
-      "Accuracy on 100 samples: 0.98\n"
+      "Batch:  0: Validation loss: 0.69070, Validation accuracy: 0.11000\n",
+      "Batch: 25: Training loss: 0.59224, Training accuracy: 0.04688\n",
+      "Batch: 50: Training loss: 0.51245, Training accuracy: 0.10938\n",
+      "Batch: 75: Training loss: 0.44854, Training accuracy: 0.12500\n",
+      "Batch: 100: Validation loss: 0.40076, Validation accuracy: 0.08680\n",
+      "Batch: 125: Training loss: 0.36918, Training accuracy: 0.09375\n",
+      "Batch: 150: Training loss: 0.34440, Training accuracy: 0.12500\n",
+      "Batch: 175: Training loss: 0.33447, Training accuracy: 0.15625\n",
+      "Batch: 200: Validation loss: 0.32194, Validation accuracy: 0.21860\n",
+      "Batch: 225: Training loss: 0.31970, Training accuracy: 0.17188\n",
+      "Batch: 250: Training loss: 0.28217, Training accuracy: 0.29688\n",
+      "Batch: 275: Training loss: 0.28411, Training accuracy: 0.37500\n",
+      "Batch: 300: Validation loss: 0.28154, Validation accuracy: 0.38200\n",
+      "Batch: 325: Training loss: 0.20559, Training accuracy: 0.56250\n",
+      "Batch: 350: Training loss: 0.25274, Training accuracy: 0.53125\n",
+      "Batch: 375: Training loss: 0.26191, Training accuracy: 0.54688\n",
+      "Batch: 400: Validation loss: 0.13904, Validation accuracy: 0.78140\n",
+      "Batch: 425: Training loss: 0.07622, Training accuracy: 0.87500\n",
+      "Batch: 450: Training loss: 0.04972, Training accuracy: 0.92188\n",
+      "Batch: 475: Training loss: 0.06718, Training accuracy: 0.92188\n",
+      "Batch: 500: Validation loss: 0.04064, Validation accuracy: 0.93840\n",
+      "Batch: 525: Training loss: 0.04974, Training accuracy: 0.89062\n",
+      "Batch: 550: Training loss: 0.02859, Training accuracy: 0.96875\n",
+      "Batch: 575: Training loss: 0.06366, Training accuracy: 0.90625\n",
+      "Batch: 600: Validation loss: 0.02057, Validation accuracy: 0.97040\n",
+      "Batch: 625: Training loss: 0.00719, Training accuracy: 0.98438\n",
+      "Batch: 650: Training loss: 0.02578, Training accuracy: 0.95312\n",
+      "Batch: 675: Training loss: 0.01163, Training accuracy: 0.98438\n",
+      "Batch: 700: Validation loss: 0.02670, Validation accuracy: 0.96200\n",
+      "Batch: 725: Training loss: 0.00736, Training accuracy: 1.00000\n",
+      "Batch: 750: Training loss: 0.03321, Training accuracy: 0.96875\n",
+      "Batch: 775: Training loss: 0.01939, Training accuracy: 0.96875\n",
+      "Final validation accuracy: 0.96240\n",
+      "Final test accuracy: 0.96370\n",
+      "Accuracy on 100 samples: 0.97\n"
      ]
     }
    ],
